--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-next-admin",
+  "name": "CEIT",
   "version": "2.4.33",
   "description": "vue3 vite next admin template",
   "author": "lyt_20201208",
