--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,5 @@
 ENV = 'development'
 
 # 本地环境接口地址
-VITE_API_URL = 'http://localhost:8808/'
+# VITE_API_URL = 'http://localhost:8808/'
+VITE_API_URL = 'http://localhost:8090/'
